--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,14 @@
     "rules": {
         "no-trailing-spaces": "warn",
         "no-empty": "warn",
-        "no-multiple-empty-lines": "warn"
+        "no-multiple-empty-lines": "warn",
+        "space-infix-ops": "warn",
+        "padded-blocks": "warn",
+        "space-in-parens": "warn",
+        "no-multi-spaces": "warn",
+        "keyword-spacing": "warn",
+        "space-before-blocks": "warn",
+        "arrow-spacing": "warn",
+        "comma-spacing": "warn"
     }
 }
